--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <script src=“./lib/phaser.js”></script>
-    <h1>Rocket Patrol Game test1</h1>
+    <h1>Rocket Patrol Game</h1>
     <script src = "./src/main.js"></script>
 </body>
 </html>
