--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <script src=“./lib/phaser.js”></script>
+    <script src="./lib/phaser.js"></script>
     <h1>Rocket Patrol Game</h1>
     <script src = "./src/main.js"></script>
 </body>
